# app-secrets-vault-example

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  file_io.hpp  json_vault.cpp  jwr_vault.cpp  simple.cpp
examples/pepper/: encrypted_file.cpp  encrypted_file.hpp  machine_bound.cpp  machine_bound.hpp  os_keychain.cpp  os_keychain.hpp  pepper_provider.cpp  pepper_provider.hpp
test/: CMakeLists.txt  test_pepper.cpp  test_vault.cpp
